Enable generating recipe CSVs from directories of class files.
This allows us to fix the order that rewrite-build-gradle-plugin does things.
Currently it has to build the jar to extract the CSV from the jar so it can generate an updated CSV to be included in the jar.
This is an unnecessary, cart-before-the-horse way of doing things.